--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcc 'Q'
 - !lcsh 'Science -- Philosophy'
 - !lcsh 'Spencer, Herbert, 1820-1903'
+- GITenberg
 title: 'Spencer''s Philosophy of Science
 
   The Herbert Spencer Lecture Delivered at the Museum 7 November, 1913'
